changed text examples

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="list">
 
       <ul>
-      <li><div class="sw">Sweetie Weather</div>
+      <li><div class="sw">Song example</div>
       </li>
-       <li><div class="sw">Sweater Weather</div>
+       <li><div class="sw">Goes here</div>
       </li>
        <li><div class="sw">Sweater Weather</div>
       </li>
