--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
   <div class="mains">
+  	<h1>Press Play to Begin.</h1>
     <form>
       <input type="text" name="enter-artist" placeholder="enter artist name here">
     </form>
+  
   </div>
   <div class="songs">
     <P>TOP 5 SONGS</P>
@@ -32,6 +34,8 @@
       </ul>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
