added spotify api to script to display top 5 tracks of an artist

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Enter Artist Name</title>
+  <title>sweetie weather</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
   <div class="mains">
-  	<h1>Press Play to Begin.</h1>
+  	<h1>press play to begin.</h1>
     <form>
-      <input type="text" name="enter-artist" placeholder="enter artist name here">
+      <input type="text" name="enter-artist" placeholder="enter artist name here" id="artistInput">
     </form>
   
   </div>
@@ -21,7 +21,7 @@
     <div class="list">
 
       <ul>
-      <li><div class="sw">Song example</div>
+      <!--<li><div class="sw">Song example</div>
       </li>
        <li><div class="sw">Goes here</div>
       </li>
@@ -30,7 +30,7 @@
        <li><div class="sw">Sweater Weather</div>
       </li>
        <li><div class="sw">Sweater Weather</div>
-      </li>
+      </li>-->
       </ul>
     </div>
   </div>
