--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
