cleaned up the script a little, added a readme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>sweetie weather</title>
+  <title>Top 5</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900' rel='stylesheet' type='text/css'>
  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,12 +25,6 @@
       <!--<li><div class="sw">Song example</div>
       </li>
        <li><div class="sw">Goes here</div>
-      </li>
-       <li><div class="sw">Sweater Weather</div>
-      </li>	
-       <li><div class="sw">Sweater Weather</div>
-      </li>
-       <li><div class="sw">Sweater Weather</div>
       </li>-->
       </ul>
     </div>
